# cli-simple-app

./: Cargo.toml
src/: main.rs
src/file/: append_to_file.rs  get_file.rs  get_file_json.rs  mod.rs  rewrite_file.rs
src/sections/: create_account.rs  create_todo_item.rs  create_todo_list.rs  dashboard.rs  home.rs  login.rs  mod.rs  not_found.rs
src/sections/components/: header.rs
src/state/: account.rs  database.rs  mod.rs  todo_list.rs
src/terminal/: colors.rs  in_out.rs  mod.rs
