[package]
name = "simple-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.1.2", features = ["v4"] }
colored = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
console = "0.15.1"
